[Mac][Material Design] Improve bookmark folder menu performance.

This cl fixes a problem where if you move the mouse over an open
bookmark folder window, if you move the mouse fast enough the hover
state drawing begins to lag the mouse position.

R=tapted@chromium.org
BUG=617803

Review-Url: https://codereview.chromium.org/2073753004
Cr-Commit-Position: refs/heads/master@{#401663}

Former-commit-id: b4e9a989d00a4753d2d6e1f5229da4ae9a302b5d